# labor4-cg

./: .gitignore  CMakeLists.txt  LadeBMP.h  LadeObj.h  LadeShader.h  README.md  bear.cpp  main.cpp  mainLabor2.cpp  mainLabor3.cpp  setup.sh
Shaders/: FragmentShaderBear.glsl  FragmentShaderLabor4.glsl  VertexShaderBear.glsl  VertexShaderLabor4.glsl
